--- a/10-DivaPreprocessing.tex
+++ b/10-DivaPreprocessing.tex
@@ -1,7 +1,7 @@
 % DivaPreprocessing
 \chapter{Pre-processing \label{Preprocessing}}
 \vspace*{-1cm}
-\lettrine[lines=2, loversize=-0.1, lraise=0.1]{W}{e} describe in this chapter the tools to prepare the various input files presented in Chap. \ref{chap:general}. If you already have the input files at your disposal, you way want to go directly to the next chapter.
+\lettrine[lines=2, loversize=-0.1, lraise=0.1]{W}{e} describe in this chapter the tools to prepare the various input files presented in Chapter~ \ref{chap:general}. If you already have the input files at your disposal, you way want to go directly to the next chapter.
 
 \minitoc
 
