--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -432,6 +432,35 @@
   doi = {10.1007/BF01395775}
 }
 
+@ARTICLE{GOMIS01,
+  author = {Gomis, D. and Ruiz, S. and Pedder, M.},
+  title = {Diagnostic analysis of the {3D} ageostrophic circulation from a multivariate
+	spatial interpolation of {CTD} and {ADCP} data},
+  journal = dsr,
+  year = {2001},
+  volume = {48},
+  pages = {269-295},
+  number = {1},
+  doi = {10.1016/S0967-0637(00)00060-1},
+  owner = {charles},
+  timestamp = {2010.11.11}
+}
+
+@ARTICLE{KAPLAN00,
+  author = {Kaplan, Alexey and Kushnir, Yochanan and Cane, Mark A.},
+  title = {Reduced Space Optimal Interpolation of Historical Marine Sea Level
+	Pressure: 1854-1992*},
+  journal = jclim,
+  year = {2000},
+  volume = {13},
+  pages = {2987-3002},
+  number = {16},
+  doi = {10.1175/1520-0442(2000)013<2987:RSOIOH>2.0.CO;2},
+  owner = {charles},
+  timestamp = {2011.03.08},
+  url = {http://journals.ametsoc.org/doi/abs/10.1175/1520-0442%282000%29013%3C2987%3ARSOIOH%3E2.0.CO%3B2}
+}
+
 @ARTICLE{KARAFISTAN02,
   author = {Karafistan, A. and J.-M. Martin and M. Rixen and J.-M. Beckers},
   title = {Space and time distributions of phosphates in the {M}editerranean
@@ -473,6 +502,19 @@
   year = {1990},
   volume = {95},
   pages = {13529-13541}
+}
+
+@ARTICLE{OOYAMA87,
+  author = {K. V. Ooyama},
+  title = {Scale-controlled objective analysis},
+  journal = mwr,
+  year = {1987},
+  volume = {115},
+  pages = {2479-2506},
+  number = {10},
+  doi = {10.1175/1520-0493(1987)115<2479:SCOA>2.0.CO;2},
+  owner = {charles},
+  timestamp = {2011.10.06}
 }
 
 @UNPUBLISHED{OUBERDOUS11,
