--- a/8-DivaConstraints.tex
+++ b/8-DivaConstraints.tex
@@ -1,4 +1,4 @@
-\chapter{Additional analysis constraint \label{chap:advection}}
+\chapter{Additional analysis constraints \label{chap:advection}}
 \vspace*{-1cm}
 \lettrine[lines=2, loversize=-0.1, lraise=0.1]{D}{iva} software offers the possibility of considering a velocity field that will influence the results of the analysis through advection. 
 
