--- a/9-DivaGeneral.tex
+++ b/9-DivaGeneral.tex
@@ -1,21 +1,17 @@
-\chapter{General issues\label{chap:general}}
-%------------------------
+\chapter{Description of the input files\label{chap:general}}
+%-----------------------------------------------------------
 
-\lettrine[lines=2, loversize=-0.1, lraise=0.1]{W}{e} describe here the basic requirements in order to perform a simple \diva\, analysis as well as the directory structure of the software. 
+\lettrine[lines=2, loversize=0.0, lraise=0.5]{T}{he} input files required by \diva for simple 2-D analysis are described here. input files required by \diva for simple 2-D analysis are described here.
+input files required by \diva for simple 2-D analysis are described here.
 
-More complex applications are described in Chap. \ref{chap:running}.
+
 
 
 \minitoc
 
 \newpage % 
 
-Two implementations are available: the Command Line version (CL) and the Graphical User Interface (GUI).
 
-The CL version allows for batch processing and customization, but is not practical for beginners. It is much
-better suited for repeated and automated treatment (\textit{e.g.} analysis at various depths or with different data sets). Furthermore it will benefit from latest developments before the GUI version.
-
-As most of the recently developed tools are only available for the CL version, the GUI will be described in a distinct chapter.
 
 
 %
