--- a/DivaUserGuide2012.tex
+++ b/DivaUserGuide2012.tex
@@ -51,7 +51,7 @@
 \thispagestyle{empty}
 \part{4-D implementation (GODIVA)}
 
-% \input{15-Godiva}
+%\input{15-Godiva}
 
 %---------------------------PART 4------------------
 \thispagestyle{empty}
@@ -64,7 +64,7 @@
 %----------------------------------------------------
 \pagestyle{empty}
 
-%\input{18-divademecum} % --> to prepare (2D and 4D)
+\input{18-divademecum} % --> to prepare (2D and 4D)
 
 \input{19-DivaLinks}
 
